--- a/CarRental/Views/Cars/Create.cshtml
+++ b/CarRental/Views/Cars/Create.cshtml
@@ -3,7 +3,7 @@
 <div class="container mt-4">
     <h1>Create New Car</h1>
 
-    <form asp-action="Create" method="post">
+    <form asp-action="Create" method="post" enctype="multipart/form-data">
         <div class="form-group">
             <label asp-for="Brand"></label>
             <input asp-for="Brand" class="form-control" />
@@ -32,6 +32,11 @@
             <label asp-for="IsAvailable"></label>
             <input asp-for="IsAvailable" type="checkbox" class="form-check-input" />
             <span asp-validation-for="IsAvailable" class="text-danger"></span>
+        </div>
+
+        <div class="form-group">
+            <label>Car Image</label>
+            <input type="file" name="imageFile" class="form-control" />
         </div>
 
         <button type="submit" class="btn btn-success">Create</button>
